[package]
name = "mirror-mirror-macros"
version = "0.1.0"
edition = "2021"
authors = ["Embark <opensource@embark-studios.com>", "David Pedersen <david.pdrsn@gmail.com>"]
repository = "https://github.com/EmbarkStudios/mirror-mirror"
homepage = "https://github.com/EmbarkStudios/mirror-mirror"
license = "MIT OR Apache-2.0"
rust-version = "1.65"
description = "Macros for the mirror-mirror crate"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.47"
quote = "1.0.21"
syn = { version = "1.0.102", features = ["full", "visit"] }

[dev-dependencies]
mirror-mirror = { path = "../mirror-mirror", version = "0.1", default-features = false }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
