[package]
name = "mirror-mirror-macros"
version = "0.1.4" # remember to bump the version `mirror-mirror` depends on
edition = "2021"
authors = ["Embark <opensource@embark-studios.com>", "David Pedersen <david.pdrsn@gmail.com>"]
repository = "https://github.com/EmbarkStudios/mirror-mirror"
homepage = "https://github.com/EmbarkStudios/mirror-mirror"
license = "MIT OR Apache-2.0"
rust-version = "1.65"
description = "Macros for the mirror-mirror crate"

[lib]
proc-macro = true

[dependencies]
kollect = { version = "0.3.2", default-features = false }
proc-macro2 = "1.0.47"
quote = "1.0.21"
syn = { version = "2.0.2", features = ["full", "parsing", "visit"] }

[dev-dependencies]
mirror-mirror = { path = "../mirror-mirror", version = "0.1", default-features = false }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
