[package]
name = "mirror-mirror"
version = "0.1.0"
edition = "2021"
authors = ["Embark <opensource@embark-studios.com>", "David Pedersen <david.pdrsn@gmail.com>"]
repository = "https://github.com/EmbarkStudios/mirror-mirror"
homepage = "https://github.com/EmbarkStudios/mirror-mirror"
license = "MIT OR Apache-2.0"
rust-version = "1.65"
description = "Reflection library for Rust"
keywords = ["reflection"]

[features]
default = ["dep:speedy", "std"]
std = []
speedy = ["std"]

[dependencies]
ahash = { version = "0.8.2", default-features = false }
mirror-mirror-macros = { path = "../mirror-mirror-macros", version = "0.1.0" }
ordered-float = { version = "3.4.0", default-features = false }
serde = { version = "1.0", default-features = false, features = ["derive", "alloc"] }
speedy = { version = "0.8", optional = true }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
