[package]
name = "mirror-mirror"
version = "0.1.14"
edition = "2021"
authors = ["Embark <opensource@embark-studios.com>", "David Pedersen <david.pdrsn@gmail.com>"]
repository = "https://github.com/EmbarkStudios/mirror-mirror"
homepage = "https://github.com/EmbarkStudios/mirror-mirror"
license = "MIT OR Apache-2.0"
readme = "../../README.md"
rust-version = "1.65"
description = "Reflection library for Rust"
keywords = ["reflection"]

[features]
default = ["speedy", "serde", "std"]
std = ["dep:syn"]
speedy = ["std", "dep:speedy"]
serde = ["dep:serde"]
glam = ["dep:glam"]
macaw = ["dep:macaw"]

[dependencies]
ahash = { version = "0.8.2", default-features = false }
mirror-mirror-macros = { path = "../mirror-mirror-macros", version = "0.1.4" }
once_cell = { version = "1.16", features = ["alloc", "race", "critical-section"], default-features = false }
ordered-float = { version = "3.4.0", default-features = false }
serde = { version = "1.0.158", default-features = false, features = ["derive", "alloc"], optional = true }
speedy = { version = "0.8.5", optional = true }
syn = { version = "2.0", features = ["full", "parsing"], optional = true }
glam = { version = ">= 0.22, <= 0.24", optional = true }
macaw = { version = "0.18", optional = true }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
